ags (0.6.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock while muting pad
	* enhaced AgsMachineEditor to be thread-safe
	* modified ags_audio_loop.c and ags_gui_thread.c to process in parallel

ags (0.6.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed NULL pointer in ags_line.c as accessing mutex manager
	* fixed NULL pointer in ags_drum_output_line.c as accessing machine while setting channel

ags (0.6.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added even more mutices to guarantee thread-safety

ags (0.6.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added more mutices to guarantee thread-safety

ags (0.6.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed race condition caused as stopping the engine ended in a dead-lock

ags (0.6.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed startup dead-lock
	* implemented ags_main_loop_get_tree_lock()

ags (0.6.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing notation due to refactoring of 0.6.8

ags (0.6.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed super-threaded scope audio and channel to be thread-safe
	* refactored ags_audio_set_audio_channels() and ags_audio_set_pads()
	* improved ags_channel_set_recycling() to instantiate AgsRecallID
	* enhanced super-threaded scope recycling but is probably not yet ready
	* enhanced ags_recycling.c to use mutices in view of super-threaded computing
	* enhanced ags_audio.c and ags_channel.c the use of mutices

ags (0.6.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash related to XML IO of AgsFileLink
	* implemented ags-envelope recall but it's not tested, yet

ags (0.6.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed modified default thread model in ags_config.c what caused certain crashes without ECC